--- a/app/src/main/res/layout/forecast_list_item.xml
+++ b/app/src/main/res/layout/forecast_list_item.xml
@@ -1,39 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:padding="10dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_marginRight="30dp"
         android:id="@+id/weatherImageView"
         android:src="@drawable/cloud"
-        android:scaleType="centerCrop"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/descriptionTextView"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:text="description"
-        android:textColor="@color/colorPrimary"/>
+        android:scaleType="fitCenter"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/temperatureTextView"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:text="Temp"
-        android:textColor="@color/colorPrimary"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/dayTextView"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:text="Temp"
-        android:textColor="@color/colorPrimary"/>
+        <TextView
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:id="@+id/dayTextView"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:text="Day"
+            android:textColor="@color/colorPrimary"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/dayTextView"
+            android:layout_alignTop="@+id/dayTextView"
+            android:id="@+id/temperatureTextView"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:text="Temp"
+            android:textColor="@color/colorPrimary"/>
+
+    </RelativeLayout>
 
 </LinearLayout>
