--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#0C9BAA</color>
+    <color name="colorPrimaryDark">#0C9BAA</color>
+    <color name="colorLight">#A3DCE2</color>
+    <color name="colorAccent">#F8B000</color>
+    <color name="colorGray">#EDEDED</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
