--- a/app/src/main/res/layout/activity_forecast.xml
+++ b/app/src/main/res/layout/activity_forecast.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.guest.thebetterweatherapp.ForecastActivity">
+    tools:context=".ui.ForecastActivity">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
